--- a/GagTag/Main.storyboard
+++ b/GagTag/Main.storyboard
@@ -73,6 +73,12 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="vcH-vp-xuD"/>
+                                    <barButtonItem title="Users" id="YAy-s0-LKW">
+                                        <connections>
+                                            <action selector="actionUsers:" destination="GpD-xn-6oQ" id="bak-dR-gMN"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="qdc-VW-ux3"/>
                                     <barButtonItem enabled="NO" title="Camera" id="mXo-Rf-A04">
                                         <connections>
                                             <action selector="actionCamera:" destination="GpD-xn-6oQ" id="KLt-g1-OE1"/>
@@ -506,6 +512,58 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0EX-kT-rql" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4806" y="-1244"/>
+        </scene>
+        <!--Gag Users View Controller-->
+        <scene sceneID="a2A-Pi-eqX">
+            <objects>
+                <viewController storyboardIdentifier="gagUsers" id="qvT-7v-VTf" customClass="GagUsersViewController" customModule="GagTag" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9a1-TK-hbO"/>
+                        <viewControllerLayoutGuide type="bottom" id="d8u-hg-RVH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8Tj-b8-OTT">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rVX-gP-Ugu">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="Gag Users" id="ggj-BX-7Eu">
+                                        <barButtonItem key="rightBarButtonItem" title="Done" id="GZ5-o6-Ljv">
+                                            <connections>
+                                                <action selector="done:" destination="qvT-7v-VTf" id="o8t-7U-diS"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="WRF-oX-6ms">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="qvT-7v-VTf" id="GT9-U8-AII"/>
+                                    <outlet property="delegate" destination="qvT-7v-VTf" id="slW-j4-eXP"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rVX-gP-Ugu" firstAttribute="trailing" secondItem="WRF-oX-6ms" secondAttribute="trailing" id="4dJ-Dt-vew"/>
+                            <constraint firstItem="rVX-gP-Ugu" firstAttribute="leading" secondItem="8Tj-b8-OTT" secondAttribute="leading" id="HvC-6t-cIC"/>
+                            <constraint firstAttribute="trailing" secondItem="rVX-gP-Ugu" secondAttribute="trailing" id="TFx-7D-KRO"/>
+                            <constraint firstItem="rVX-gP-Ugu" firstAttribute="leading" secondItem="WRF-oX-6ms" secondAttribute="leading" id="XeQ-wA-zL3"/>
+                            <constraint firstItem="WRF-oX-6ms" firstAttribute="bottom" secondItem="d8u-hg-RVH" secondAttribute="top" id="n2d-sX-Pmo"/>
+                            <constraint firstItem="rVX-gP-Ugu" firstAttribute="top" secondItem="9a1-TK-hbO" secondAttribute="bottom" id="nhw-Qe-YA6"/>
+                            <constraint firstItem="WRF-oX-6ms" firstAttribute="top" secondItem="rVX-gP-Ugu" secondAttribute="bottom" id="wrd-hM-D0o"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="WRF-oX-6ms" id="ruE-Ie-aVW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jR2-cr-1WU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4819" y="-390"/>
         </scene>
         <!--Reel View Controller-->
         <scene sceneID="nq6-wc-h7p">
