--- a/GagTag/Main.storyboard
+++ b/GagTag/Main.storyboard
@@ -312,6 +312,43 @@
             </objects>
             <point key="canvasLocation" x="4616" y="1092"/>
         </scene>
+        <!--My Friends View Controller-->
+        <scene sceneID="SwP-Tx-2vf">
+            <objects>
+                <viewController storyboardIdentifier="myFriends" id="0Zc-tW-Ays" customClass="MyFriendsViewController" customModule="GagTag" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="V2n-Px-fgk"/>
+                        <viewControllerLayoutGuide type="bottom" id="use-5I-gkn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mrt-kO-1Ay">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="3Qz-uF-KxE">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="0Zc-tW-Ays" id="WbY-Xq-0B6"/>
+                                    <outlet property="delegate" destination="0Zc-tW-Ays" id="0M2-wb-516"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="3Qz-uF-KxE" firstAttribute="leading" secondItem="mrt-kO-1Ay" secondAttribute="leading" id="4Bp-od-CBN"/>
+                            <constraint firstItem="3Qz-uF-KxE" firstAttribute="top" secondItem="mrt-kO-1Ay" secondAttribute="top" id="P6n-1P-Sm8"/>
+                            <constraint firstItem="3Qz-uF-KxE" firstAttribute="bottom" secondItem="use-5I-gkn" secondAttribute="top" id="aDX-lq-e7O"/>
+                            <constraint firstAttribute="trailing" secondItem="3Qz-uF-KxE" secondAttribute="trailing" id="odD-Ab-KgN"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="3Qz-uF-KxE" id="jY2-ff-VK6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="w22-ko-PeU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4616" y="1778"/>
+        </scene>
         <!--Find Friends View Controller-->
         <scene sceneID="GnA-EO-cMh">
             <objects>
@@ -420,7 +457,59 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C9k-c9-fEO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2382" y="-390"/>
+            <point key="canvasLocation" x="2380" y="-390"/>
+        </scene>
+        <!--Gag Feed View Controller-->
+        <scene sceneID="kiu-Qh-7vr">
+            <objects>
+                <viewController storyboardIdentifier="gagFeed" id="f9v-LL-fU3" customClass="GagFeedViewController" customModule="GagTag" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="459-xh-Emp"/>
+                        <viewControllerLayoutGuide type="bottom" id="sH2-un-S2r"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ng2-a3-L58">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DUU-W8-FqM">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="Gag Feed" id="9as-Js-hIW">
+                                        <barButtonItem key="rightBarButtonItem" title="Done" id="Sgl-OJ-ahf">
+                                            <connections>
+                                                <action selector="done:" destination="f9v-LL-fU3" id="DXx-oh-odS"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="5CI-Cl-XTC">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="f9v-LL-fU3" id="KYK-xZ-H2p"/>
+                                    <outlet property="delegate" destination="f9v-LL-fU3" id="w9v-Um-Do9"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="DUU-W8-FqM" firstAttribute="leading" secondItem="5CI-Cl-XTC" secondAttribute="leading" id="EXl-dD-XMk"/>
+                            <constraint firstAttribute="trailing" secondItem="5CI-Cl-XTC" secondAttribute="trailing" id="Scb-0O-pt6"/>
+                            <constraint firstItem="5CI-Cl-XTC" firstAttribute="trailing" secondItem="DUU-W8-FqM" secondAttribute="trailing" id="Ynv-bt-6BO"/>
+                            <constraint firstItem="5CI-Cl-XTC" firstAttribute="bottom" secondItem="sH2-un-S2r" secondAttribute="top" id="Zl8-9k-A34"/>
+                            <constraint firstItem="5CI-Cl-XTC" firstAttribute="top" secondItem="DUU-W8-FqM" secondAttribute="bottom" id="dIp-e8-idl"/>
+                            <constraint firstItem="5CI-Cl-XTC" firstAttribute="leading" secondItem="Ng2-a3-L58" secondAttribute="leading" id="jck-UI-KQy"/>
+                            <constraint firstItem="DUU-W8-FqM" firstAttribute="top" secondItem="459-xh-Emp" secondAttribute="bottom" id="xq6-Sb-ZLh"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="5CI-Cl-XTC" id="Xqg-3B-8ym"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kel-Sa-aXf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2374" y="326"/>
         </scene>
         <!--Friends Menu-->
         <scene sceneID="hId-Kc-KwF">
@@ -528,7 +617,11 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p5N-Zs-Oev">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                 <items>
-                                    <barButtonItem title="Reel" id="nE9-6j-PvR"/>
+                                    <barButtonItem title="Feed" id="nE9-6j-PvR">
+                                        <connections>
+                                            <action selector="feed:" destination="eTz-Up-6T0" id="DHz-s1-Dsw"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="E12-eE-9fR"/>
                                     <barButtonItem style="plain" id="enP-Hh-h3g">
                                         <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="aaB-T6-cVr">
