--- a/GagTag/GagFeedCell.xib
+++ b/GagTag/GagFeedCell.xib
@@ -7,27 +7,39 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="gagFeedCell" selectionStyle="default" indentationWidth="10" rowHeight="320" id="43k-gQ-w0f" customClass="GagFeedCell" customModule="GagTag" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="gagFeedCell" selectionStyle="default" indentationWidth="10" rowHeight="326" id="43k-gQ-w0f" customClass="GagFeedCell" customModule="GagTag" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="326"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="43k-gQ-w0f" id="0B9-1H-DyQ">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jFh-Z2-LEv">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
+                        <rect key="frame" x="35" y="38" width="250" height="250"/>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tag" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bLK-Qi-DH3">
+                        <rect key="frame" x="35" y="296" width="250" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                 <constraints>
-                    <constraint firstItem="jFh-Z2-LEv" firstAttribute="top" secondItem="0B9-1H-DyQ" secondAttribute="top" id="0GR-E4-ple"/>
-                    <constraint firstAttribute="trailing" secondItem="jFh-Z2-LEv" secondAttribute="trailing" id="KIm-L8-0kE"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="jFh-Z2-LEv" secondAttribute="bottom" constant="-8.5" id="Ph8-oy-DjR"/>
-                    <constraint firstItem="jFh-Z2-LEv" firstAttribute="leading" secondItem="0B9-1H-DyQ" secondAttribute="leading" id="tpo-uJ-82Z"/>
+                    <constraint firstItem="jFh-Z2-LEv" firstAttribute="top" secondItem="0B9-1H-DyQ" secondAttribute="top" constant="38" id="0GR-E4-ple"/>
+                    <constraint firstItem="bLK-Qi-DH3" firstAttribute="trailing" secondItem="jFh-Z2-LEv" secondAttribute="trailing" id="DLY-p9-AEo"/>
+                    <constraint firstItem="bLK-Qi-DH3" firstAttribute="leading" secondItem="jFh-Z2-LEv" secondAttribute="leading" id="JMU-qJ-gBZ"/>
+                    <constraint firstAttribute="trailing" secondItem="jFh-Z2-LEv" secondAttribute="trailing" constant="35" id="KIm-L8-0kE"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="jFh-Z2-LEv" secondAttribute="bottom" constant="29.5" id="Ph8-oy-DjR"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="bLK-Qi-DH3" secondAttribute="bottom" constant="0.5" id="X8M-Vm-idb"/>
+                    <constraint firstItem="bLK-Qi-DH3" firstAttribute="top" secondItem="jFh-Z2-LEv" secondAttribute="bottom" constant="8" symbolic="YES" id="ctH-ES-aiH"/>
+                    <constraint firstItem="jFh-Z2-LEv" firstAttribute="leading" secondItem="0B9-1H-DyQ" secondAttribute="leading" constant="35" id="tpo-uJ-82Z"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="gagImageView" destination="jFh-Z2-LEv" id="nCZ-Dv-j8k"/>
+                <outlet property="labelTag" destination="bLK-Qi-DH3" id="OQk-SD-1zT"/>
             </connections>
-            <point key="canvasLocation" x="591" y="312"/>
+            <point key="canvasLocation" x="527" y="297"/>
         </tableViewCell>
     </objects>
 </document>
