--- a/GagTag/FindFriendsCell.xib
+++ b/GagTag/FindFriendsCell.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -9,20 +9,23 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="findFriendsCell" selectionStyle="default" indentationWidth="10" id="NHi-MD-iFq" customClass="FindFriendsCell" customModule="GagTag" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="findFriendsCell" selectionStyle="default" indentationWidth="10" id="NHi-MD-iFq">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="NHi-MD-iFq" id="nAo-2x-z3x">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qbn-cp-nXV">
                         <rect key="frame" x="17" y="11" width="205" height="21"/>
+                        <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WPs-pd-72I">
                         <rect key="frame" x="230" y="7" width="68" height="30"/>
+                        <animations/>
                         <accessibility key="accessibilityConfiguration" label=""/>
                         <constraints>
                             <constraint firstAttribute="width" constant="68" id="4Z9-bE-3Yk"/>
@@ -35,6 +38,7 @@
                         </connections>
                     </button>
                 </subviews>
+                <animations/>
                 <constraints>
                     <constraint firstItem="qbn-cp-nXV" firstAttribute="leading" secondItem="nAo-2x-z3x" secondAttribute="leadingMargin" constant="9" id="CG8-Y8-Omy"/>
                     <constraint firstItem="qbn-cp-nXV" firstAttribute="baseline" secondItem="WPs-pd-72I" secondAttribute="baseline" id="Pae-Xu-RAX"/>
@@ -45,6 +49,7 @@
                     <constraint firstAttribute="trailingMargin" secondItem="WPs-pd-72I" secondAttribute="trailing" constant="14" id="tgn-df-V9p"/>
                 </constraints>
             </tableViewCellContentView>
+            <animations/>
             <connections>
                 <outlet property="buttonAction" destination="WPs-pd-72I" id="4gh-TZ-gmG"/>
                 <outlet property="labelUsername" destination="qbn-cp-nXV" id="fqg-Js-S5F"/>
