--- a/GagTag/FriendRequestCell.xib
+++ b/GagTag/FriendRequestCell.xib
@@ -1,26 +1,29 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="friendRequestCell" selectionStyle="default" indentationWidth="10" id="l7X-LC-m2s" customClass="FriendRequestCell" customModule="GagTag" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="friendRequestCell" selectionStyle="default" indentationWidth="10" id="l7X-LC-m2s">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="l7X-LC-m2s" id="hI3-ic-SlL">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EOV-9w-6Rj">
                         <rect key="frame" x="29" y="11" width="152" height="21"/>
+                        <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kZf-Tb-MTl">
                         <rect key="frame" x="283" y="11" width="22" height="22"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="22" id="mZI-1h-AyY"/>
                         </constraints>
@@ -33,6 +36,7 @@
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Qx-5u-TMU">
                         <rect key="frame" x="226" y="9" width="26" height="26"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="26" id="Q6W-bj-QpM"/>
                         </constraints>
@@ -44,6 +48,7 @@
                         </connections>
                     </button>
                 </subviews>
+                <animations/>
                 <constraints>
                     <constraint firstItem="EOV-9w-6Rj" firstAttribute="top" secondItem="hI3-ic-SlL" secondAttribute="topMargin" constant="3" id="TFB-Ys-X24"/>
                     <constraint firstItem="3Qx-5u-TMU" firstAttribute="leading" secondItem="EOV-9w-6Rj" secondAttribute="trailing" constant="45" id="cUa-aM-6Mc"/>
@@ -55,6 +60,7 @@
                     <constraint firstItem="EOV-9w-6Rj" firstAttribute="centerY" secondItem="hI3-ic-SlL" secondAttribute="centerY" id="zoU-tK-SaE"/>
                 </constraints>
             </tableViewCellContentView>
+            <animations/>
             <connections>
                 <outlet property="buttonAction" destination="kZf-Tb-MTl" id="giQ-CB-mo3"/>
                 <outlet property="labelUsername" destination="EOV-9w-6Rj" id="rc3-pX-YDD"/>
